--- a/expdes.tex
+++ b/expdes.tex
@@ -19,11 +19,12 @@ Once the OPQBox is fully validated and the Makai detection thresholds are tuned 
 	\centering
 	\includegraphics[width=1\linewidth]{img/uh-grid.pdf}	
 	\caption{University of Hawaii at Manoa power delivery infrastructure.}
-	\label{expdes:fig:3}
+	\label{expdes:fig:1}
 \end{figure}
 Open power quality project acquired cloud infrastructure from the the Information Technology Services of University of Hawaii, which is hosted on the Manoa campus. This allows for low latency operation, and keeps all of the traffic constrained to the UH internal network. Furthermore UH hosts a Stratum 1 NTP server on its campus. This provides UH OPQ deployment with a low latency, high precision time keeping option. Finally, OPQ project received the Presidents Green Initiative Award in spring 2018. Besides a \$10,000 monetary award, this provides the OPQ project with access to all of the buildings on campus, expertise of the engineers who oversee the campus power infrastructure, as well as access to all of the smart meter measurements already deployed across campus. 
 
-There are 74 smart meters deployed across the UH campus. These meters measure the fundamental frequency $V_{rms}$, power consumption, reactive power, and power factor. Data from these meters will be crossreferenced with the Napali detection system in order to ascertain it's capabilities.
+There are 74 smart meters deployed across the UH campus. These meters measure the fundamental frequency $V_{rms}$, power consumption, reactive power, and power factor. Data from these meters will be cross-referenced with the Napali detection system in order to ascertain it's benefits. Every time the Napali detects an event, both OPQBoxes and building meters will be queried for data. While it may be unfeasible to query raw data from the UH metering infrastructure, metrics are readily available. This data will be used to ascertain the proportion of false positive events detected by Napali. Additional the internal single point fault detection mechanism of the UH power meters will be used in conjunction with the events detected by Napali to measure the rate of false negative events. Both the false negative and false positive measurements will be used to ascertain the detection efficient of the Napali framework. In order to analytically compute the bandwidth savings of the Napali compared to a system which sends all the data to the sink, I will keep track of the amount of bandwidth Napali monitoring system consumed during it`s deployment on UH campus. This will in turn be compared to the bandwidth required by the OPQBoxes, if they were sending the entirety of the data to the sink, and establish the bandwidth efficiency of the Napali framework. The on-board cache for raw data will also be evaluated during the deployment. Taking into the account the detection latency of Makai, if some of the requested data is no longer available on the OPQBox, only a partial time window will be returned. These events will be marked as incomplete and their fraction as compared to the total number of events recorded will be used to establish the latency tolerance of the Napali framework. Finally Napali methodology will be compared with the single point anomaly detection. In order to do that I will compare the extent to which the sub-threshold portion of events are missed by the UH metering infrastructure. In a large distributed event, if a portion of events is not detected by the UH meter`s single point detection, but picked up by the Napali framework, these events will be flagged and analyzed for their merit. This will in turn provide a metric of distributed detection ability of the Napali framework even without the raw data acquisition. Bellow is the time-line describing the major research activities leading up to my defense.
+
 
 \begin{center}
 \begin{tabular}{ ||c | c c|| }
