--- a/intro.tex
+++ b/intro.tex
@@ -1,10 +1,14 @@
 Power quality research is a subset of power distribution research which focuses on studying  deviations from nominal power grid operating conditions. Devices connected to the power grid, as well as the distribution equipment expect a certain frequency, voltage and harmonic content of the voltage waveform they operate on. While most equipment maintains some hysteresis with respect to deviations from the nominal, large enough deviations may cause equipment failure and instability in the power grid as a whole. In a practical sense, power quality monitoring concerns itself with monitoring, collecting and analyzing power quality anomalies on a live and functioning grid. In some cases, for example when performed by the utility, this information is used to make real-time decision, to maintain the stability of the power grid. However, data collected by the power quality monitoring equipment, can also be used to diagnose local power quality problems, or to further power quality research. Power quality monitoring fit's very well into the paradigm of remote sensing and sensor networks, particularly into the newly emerging field of edge computing. Edge computing goes beyond the naive approach of transmitting the entirety of the collected data from the sensor location, and extends it by either feature extracting, preprocessing or filtering the data at the computing node itself. I propose a novel edge computing architecture which combines feature extraction at the edge level and two way communication between the sink and the edge node which will be applied to the power quality monitoring domain.
 
 \section{Overview of power grids}
-Modern power grids are hierarchically structured. Higher voltage is useful for transporting electricity over long distances, connecting cities and towns to power generation facilities. Transmissions lines of 100kV and above are used to minimize losses in long distance runs, since the same amount of power can be transmitted using much lower current, and thus much more efficiently, then the comparable low voltage line. Close to the point of distribution, transmission voltage is stepped down to 1kV-40kV range using large power transformers. This is done because the losses incurred in the final leg of transmission are minimal, while extremely high voltage equipment is expensive and requires special precautions.\cite{sivanagaraju2008electric} Finally, at the consumer level the voltage level is stepped down once more to the household voltage, for example $120V_{ac}$ for North America. It is important to note that voltage across every part of the power grid is synchronized to a phase and frequency set by the utility. This allows multiple power producers to contribute to electricity generation without interfering with each other.\cite{blaabjerg2006overview} In North America the 60Hz utility frequency is used as the baseline, and its long term stability is guaranteed by the power company. How close the power AC frequency is to the nominal value is a measure of how closely the electricity demand is balanced by the electricity generation. Traditional power generation sources involves applying mechanical torque to an alternating current generator. Incidentally, if the load on the generator increases without increasing the torque, it will slow down the generator and thus the utility frequency decreases. Similarly if the demand drops but the torque is not decreased frequency of generated power will increase. Even small deviations in frequency can have adverse effects on equipment which runs synchronous to the power grid, such as synchronous electric motors and other industrial equipment.\cite{morren2006wind} Nonlinear loads, or loads that don't draw a consistent amount of current through out an AC cycle, are highly prevalent in today's power grid. These devices contribute to the harmonic noise in power system in both current and voltage waveform. This effect, known as harmonic distortion, can have various unintended consequences on the power distribution system and connected devices. The current harmonic distortion affects the efficiency of the distribution network, while voltage harmonics may propagate across the power distribution infrastructure and affect neighboring devices.\cite{muhamad2007effects} Distributed renewable generation may also create untended harmonics. Distributed generators are commonly DC systems, which utilize inverters to generate in phase AC waveform to feed into the power grid. Depending on the inverter design the AC waveform may have spurious harmonics present.\cite{morren2006wind} Large and sudden changes in load to generation ratio change do not immediately impact the utility frequency due to the rotational inertia of the large generation systems. Instead it will cause the line voltage to change proportional to the load until the generation can catch up. If the load suddenly increases, caused for example by a large motor stall, grid voltage will experience a sharp drop, known as a sag. Similarly a large load drop will cause an voltage increase, cased a swell. Voltage sags and swells propagate throughout the entire grid infrastructure, however the dynamics of the power grid are quite complex, and hard to predict. For example a voltage sag on one sub-transmission chain may manifest and as a voltage swell in another. Finally very fast changes in load, such as short circuits, opening and closing of re-closers, and lightning strikes manifest as voltage transients. Voltage transients are energetic short-lived swells on the order of a single AC cycle, which can travel across the distribution grid. Transients may interfere with sensitive grid connected equipment, as well as trigger protection equipment such as uninterpretable power supplies, and other over-voltage protection devices. Transients, harmonic distortion, and RMS fluctuations and combinations there of make up the majority of power quality problems which affect the voltage waveform in the grid connected devices. \cite{5154067}
+Modern power grids are hierarchically structured. Higher voltage is useful for transporting electricity over long distances, connecting cities and towns to power generation facilities. Transmissions lines of 100kV and above are used to minimize losses in long distance runs, since the same amount of power can be transmitted using much lower current, and thus much more efficiently, then the comparable low voltage line. Close to the point of distribution, transmission voltage is stepped down to 1kV-40kV range using large power transformers. This is done because the losses incurred in the final leg of transmission are minimal, while extremely high voltage equipment is expensive and requires special precautions.\cite{sivanagaraju2008electric} Finally, at the consumer level the voltage level is stepped down once more to the household voltage, for example $120V_{ac}$ for North America. It is important to note that voltage across every part of the power grid is synchronized to a phase and frequency set by the utility. This allows multiple power producers to contribute to electricity generation without interfering with each other.\cite{blaabjerg2006overview} In North America the 60Hz utility frequency is used as the baseline, and its long term stability is guaranteed by the power company. How close the power AC frequency is to the nominal value is a measure of how closely the electricity demand is balanced by the electricity generation. 
+
+Traditional power generation sources involves applying mechanical torque to an alternating current generator. Incidentally, if the load on the generator increases without increasing the torque, it will slow down the generator and thus the utility frequency decreases. Similarly if the demand drops but the torque is not decreased frequency of generated power will increase. Even small deviations in frequency can have adverse effects on equipment which runs synchronous to the power grid, such as synchronous electric motors and other industrial equipment.\cite{morren2006wind} Nonlinear loads, or loads that don't draw a consistent amount of current through out an AC cycle, are highly prevalent in today's power grid. These devices contribute to the harmonic noise in power system in both current and voltage waveform. This effect, known as harmonic distortion, can have various unintended consequences on the power distribution system and connected devices. The current harmonic distortion affects the efficiency of the distribution network, while voltage harmonics may propagate across the power distribution infrastructure and affect neighboring devices.\cite{muhamad2007effects} Distributed renewable generation may also create untended harmonics. Distributed generators are commonly DC systems, which utilize inverters to generate in phase AC waveform to feed into the power grid. Depending on the inverter design the AC waveform may have spurious harmonics present.\cite{morren2006wind} 
+
+Large and sudden changes in load to generation ratio change do not immediately impact the utility frequency due to the rotational inertia of the large generation systems. Instead it will cause the line voltage to change proportional to the load until the generation can catch up. If the load suddenly increases, caused for example by a large motor stall, grid voltage will experience a sharp drop, known as a sag. Similarly a large load drop will cause an voltage increase, cased a swell. Voltage sags and swells propagate throughout the entire grid infrastructure, however the dynamics of the power grid are quite complex, and hard to predict. For example a voltage sag on one sub-transmission chain may manifest and as a voltage swell in another. Finally very fast changes in load, such as short circuits, opening and closing of re-closers, and lightning strikes manifest as voltage transients. Voltage transients are energetic short-lived swells on the order of a single AC cycle, which can travel across the distribution grid. Transients may interfere with sensitive grid connected equipment, as well as trigger protection equipment such as uninterpretable power supplies, and other over-voltage protection devices. Transients, harmonic distortion, and RMS fluctuations and combinations there of make up the majority of power quality problems which affect the voltage waveform in the grid connected devices. \cite{5154067} All of these issues can cause power quality problems, as will be discussed further in Section \ref{}.
 
 \section{Edge computing approach to anomaly detection}\label{intro:edge}
-Edge computing is an emergent field in distributed systems. Edge computing is a consequence of ever decreasing power consumption of computational utilities found on the sensor nodes, as well as incremental improvements in battery technology. With ever-increasing margin for computational resources in sensor networks, it becomes possible to process and store the acquired data on the device itself, as opposed to the centralized sink. Thus the idea of edge computing leverages available computing power of the sensor node to allow for smarter distributed sensing. Edge computing with respect to remote sensing allows for several new approaches to anomaly detection. Anomaly detection is a common topic across many disciplines and domains. In cyber-security research, anomalous network traffic and program behavior is often indicative of malicious behavior. In seismic monitoring, anomalies in ground vibrations may be precursors to an earthquake or a volcano eruption. In observational astronomy, anomaly detection is used for detection of transient events such as gamma ray bursts. Sensor networks are commonly tasked with anomaly detection and must often act on them. Traditionally, stringent constraints on power consumption of battery powered wireless sensor network nodes low bandwidth and low complexity methods are preferred. Furthermore, many sensor networks are often hindered by local noise, thus requiring higher level filtering in order and in network processing to determine if an anomaly has occurred. If the signal to noise of the local measurements is quite high this problem becomes trivial: one simply collects all the distributed measurements if one or more of the measurements indicates an anomaly. Unfortunately, in the real world such problems are rare and instead the distributed signal is dominated by extraneous local noise. For example individual seismic sensors can’t distinguish between a global anomaly such as an earthquake and local noise such as vibration caused by a passing semi-truck. The problem of global anomaly detection with distributed sensing has been thoroughly explored in self organizing wireless sensor networks. However these approaches are insufficient in the paradigm of edge computing. Edge computing relies on Internet for transport, and thus the cost of communicating with the local sink and the local node is similar. Indeed in some cases it is impossible to achieve node-to-node communication without an intermediary due to firewalls, and other security mechanisms. For the rest of the document we will only consider approaches which rely on a sink node to facilitate anomaly detection.
+Edge computing is an emergent field in distributed systems. Edge computing is a consequence of ever decreasing power consumption of computational utilities found on the sensor nodes, as well as incremental improvements in battery technology. With ever-increasing margin for computational resources in sensor networks, it becomes possible to process and store the acquired data on the device itself, as opposed to the centralized sink. Thus the idea of edge computing leverages available computing power of the sensor node to allow for smarter distributed sensing. Edge computing with respect to remote sensing allows for several new approaches to anomaly detection. Anomaly detection is a common topic across many disciplines and domains. In cyber-security research, anomalous network traffic and program behavior is often indicative of malicious behavior. In seismic monitoring, anomalies in ground vibrations may be precursors to an earthquake or a volcano eruption. In observational astronomy, anomaly detection is used for detection of transient events such as gamma ray bursts. Sensor networks are commonly tasked with anomaly detection and must often act on them. Traditionally, stringent constraints on power consumption of battery powered wireless sensor network nodes mean that low bandwidth and low complexity methods are preferred. Furthermore, many sensor networks are often hindered by local noise, thus requiring higher level filtering in order and in network processing to determine if an anomaly has occurred. If the signal to noise of the local measurements is quite high this problem becomes trivial: one simply collects all the distributed measurements if one or more of the measurements indicates an anomaly. Unfortunately, in the real world such problems are rare and instead the distributed signal is dominated by extraneous local noise. For example individual seismic sensors can`t distinguish between a global anomaly such as an earthquake and local noise such as vibration caused by a passing semi-truck. The problem of global anomaly detection with distributed sensing has been thoroughly explored in self organizing wireless sensor networks. However these approaches are insufficient in the paradigm of edge computing. Edge computing relies on Internet for transport, and thus the cost of communicating with the local sink and the local node is similar. Indeed in some cases it is impossible to achieve node-to-node communication without an intermediary due to firewalls, and other security mechanisms. For the rest of the document we will only consider approaches which rely on a sink node to facilitate anomaly detection.
 
 There are several solutions for dealing with the local noise problem in an Internet-enabled sensor network. A naive solution is to simply record every distributed measurement to a centralized data sink. This sink, as well as the infrastructure down stream of it has a view of the entire state of the system and can thus detect anomalies using either real-time or batch processing. An alternative to sending all of the distribute measurements to the sink is to let the individual sensors decide which temporal regions of the measurement constitute an anomaly. This approach, called self triggering, has a benefit of the reducing the bandwidth constraints for each sensor without the requirement for two way communication between the sensor and the sink.
 
@@ -64,11 +68,11 @@ Residential power quality monitoring presents a number of issues. First of all i
 
 \section{Edge computing approach to power quality monitoring.}
 
-IEEE1159 standard describes the techniques for single location power quality monitoring. For transient monitoring it suggests a sampling rate of at least 7680 samples/second, up to 1 Megasample/second. This implies that if a power quality event detection system relies on raw data from all monitors it would do so at a very large bandwidth cost. At 20 Ksamples/second at 16bit per samples a single monitoring device would generate 300Kb/second. Several thousand devices could easily saturate at 1Gb link with no obvious benefit. Collecting and recording all of the raw waveform data from residential power quality meters for batch processing presents some privacy concerns as outlined above. on board event detection methodology allows the measurement devices to select which temporal regions of measurements constitute an event. This is a perfect strategy from the consumers perspective, since it would allow for recording of power quality information which directly impact their residence. As mentioned in Section \ref{intro:edge}, this method relies on a threshold based approach where every device has a computes several metrics from the raw waveform and compares then to preprogrammed threshold values. Metrics such as $V_{rms}$, fundamental frequency and THD are easily adapted for single point power quality measurements. Temporal regions during which these metrics surpass a threshold are considered by the device as a power quality event, and thus are recorded. 
+IEEE1159 standard describes the techniques for single location power quality monitoring. For transient monitoring it suggests a sampling rate of at least 7680 samples/second, up to 1 Megasample/second. This implies that if a power quality event detection system relies on raw data from all monitors it would do so at a very large bandwidth cost. At 20 Ksamples/second at 16bit per samples a single monitoring device would generate 300Kb/second. Several thousand devices could easily saturate at 1Gb link with no obvious benefit. Collecting and recording all of the raw waveform data from residential power quality meters for batch processing presents some privacy concerns as outlined above. On board event detection methodology allows the measurement devices to select which temporal regions of measurements constitute an event. This is a perfect strategy from the consumer`s perspective, since it would allow for recording of power quality information which directly impact their residence. As mentioned in Section \ref{intro:edge}, this method relies on a threshold based approach where every device has a computes several metrics from the raw waveform and compares then to preprogrammed threshold values. Metrics such as $V_{rms}$, fundamental frequency and THD are easily adapted for single point power quality measurements. Temporal regions during which these metrics surpass a threshold are considered by the device as a power quality event, and thus are recorded. 
 
-The problem with the method outlined above is that grid-wide power quality events do not affect the entire grid in the same way. For example due to the grids hierarchical structure a voltage sag on one sub-circuit can manifest as as a sag of a different magnitude or even a swell on another.\cite{kahle2016power} This may result in a situation where some of the monitoring devices will not consider a power quality anomaly as an event, because it did not surpass the metric threshold, and simply ignore it. From the research perspective however it is important to get raw data from all of the affected devices not just the ones that were the most affected. This makes a hybrid centralized/decentralized event acquisition strategy a lot more attractive for distributed residential power quality monitoring. In this scheme all monitoring devices use local processing resources to feature extract the incoming waveforms while storing them locally for several minutes. A sink collects all of the extracted features and looks for anomalies which are present in the feature data stream which we will refer to as triggering stream. If an anomaly is present in only a single device, it is highly probable that the disturbance occurred in the residence. Depending on the users privacy preference, raw data for a single device anomaly can be be recorded for later analysis, or in case of a highly privacy conscious user, ignored. On the other hand if the triggering stream shows an anomaly temporally collocated across multiple devices, the entire network or a subset of the network may be queried for raw waveform data for a temporal region which corresponds to the disturbance in the triggering stream.
+The problem with the method outlined above is that grid-wide power quality events do not affect the entire grid in the same way. For example due to the grids hierarchical structure a voltage sag on one sub-circuit can manifest as as a sag of a different magnitude or even a swell on another.\cite{kahle2016power} This may result in a situation where some of the monitoring devices will not consider a power quality anomaly as an event, because it did not surpass the metric threshold, and simply ignore it. From the research perspective, however, it is important to get raw data from all of the affected devices not just the ones that were the most affected. This makes a hybrid centralized/decentralized event acquisition strategy more attractive for distributed residential power quality monitoring. In this scheme all monitoring devices use local processing resources to feature extract the incoming waveforms while storing them locally for several minutes. A sink collects all of the extracted features and looks for anomalies which are present in the feature data stream which we will refer to as triggering stream. If an anomaly is present in only a single device, it is highly probable that the disturbance occurred in the residence. Depending on the user`s privacy preference, raw data for a single device anomaly can be be recorded for later analysis, or in case of a highly privacy conscious user, ignored. On the other hand if the triggering stream shows an anomaly temporally collocated across multiple devices, the entire network or a subset of the network may be queried for raw waveform data for a temporal region which corresponds to the disturbance in the triggering stream.
 
-The main disadvantage of this method is that while there are plenty of power quality event detection methodologies for single location, there has been little development in the distributed event detection methods and metrics. While the two problems are quite similar, indeed one may use the same metrics for distributed event detection as with the single point power quality monitoring. However, it's also important to consider temporal locality of anomalies detected across multiple devices and effects of device synchronization. Power quality anomalies such as voltage sags and transients will propagate through the transmission lines at the speed of light, however due to the non-linear elements which make up the power-line junctions, a certain temporal spread in event detection across multiple locations is expected. For large power grids such continental United States grids, large frequency fluctuations propagate in a highly nonlinear ways. In these cases the event propagation is limited by the inherent rotational inertia of the power generation systems, and the speed at which the grid protection elements such as reclosers and circuit breakers operate. Regardless, the closer local anomalies are detected in time, the more likely are they to be a result of a gridwide event. Unfortunately, it is unfeasible to perfectly temporally synchronize the distributed power quality monitors. While methods such as GPS can in principle provide synchronization of up to 10ns jitter across a large geographical region, they require a line of sight to the sky, and add a non-trivial cost to the bill of materials for every power quality meter. Furthermore, GPS is prone to loosing signal depending on atmospheric conditions, and can be very sensitive to fluctuations in the power supply voltage, a critical time in power anomaly detection. Alternative to GPS is Network Time Protocol. Network time protocol can provide timing synchronization on the order of $~10ms$ across wide are Internet, which is on the order of $\frac{1}{2}$ of a grid cycle. NTP performance could be further improved by using geographically close time servers which are themselves synchronized via GPS. Consider a situation where two devices are located in household which experience a local $100ms$ power quality disturbance every $10$ minutes. Even with a $~10ms$ synchronization jitter, it will take on average $21.5$ days before the two disturbances are observed within $20ms$ of each other. If a third device is introduced, it is highly unlikely that all 3 would observe unrelated local anomalies within $20ms$ of each other over the lifetime of the power quality monitoring network. This implies that combination of temporal and threshold based correlation on the feature extraction data would allow one to build a robust residential based power grid monitoring system which would yield a very low rate of false positives. 
+The main disadvantage of this method is that while there are plenty of power quality event detection methodologies for single location, there has been little development in the distributed event detection methods and metrics. While the two problems are quite similar, indeed one may use the same metrics for distributed event detection as with the single point power quality monitoring. However, it's also important to consider temporal locality of anomalies detected across multiple devices and effects of device synchronization. Power quality anomalies such as voltage sags and transients will propagate through the transmission lines at the speed of light, however due to the non-linear elements which make up the power-line junctions, a certain temporal spread in event detection across multiple locations is expected. For large power grids such continental United States grids, large frequency fluctuations propagate in a highly nonlinear ways. In these cases the event propagation is limited by the inherent rotational inertia of the power generation systems, and the speed at which the grid protection elements such as reclosers and circuit breakers operate. Regardless, the closer local anomalies are detected in time, the more likely are they to be a result of a gridwide event. Unfortunately, it is unfeasible to perfectly temporally synchronize the distributed power quality monitors. While methods such as GPS can in principle provide synchronization of up to 10ns jitter across a large geographical region, they require a line of sight to the sky, and add a non-trivial cost to the bill of materials for every power quality meter. Furthermore, GPS is prone to losing signal depending on atmospheric conditions, and can be very sensitive to fluctuations in the power supply voltage, a critical time in power anomaly detection. An alternative to GPS is Network Time Protocol. Network time protocol can provide timing synchronization on the order of $~10ms$ across wide are Internet, which is on the order of $\frac{1}{2}$ of a grid cycle. NTP performance could be further improved by using geographically close time servers which are themselves synchronized via GPS. Consider a situation where two devices are located in household which experience a local $100ms$ power quality disturbance every $10$ minutes. Even with a $~10ms$ synchronization jitter, it will take on average $21.5$ days before the two disturbances are observed within $20ms$ of each other. If a third device is introduced, it is highly unlikely that all 3 would observe unrelated local anomalies within $20ms$ of each other over the lifetime of the power quality monitoring network. This implies that combination of temporal and threshold based correlation on the feature extraction data would allow one to build a robust residential based power grid monitoring system which would yield a very low rate of false positives. 
 
 \begin{figure}[h]
 	\centering
@@ -77,6 +81,10 @@ The main disadvantage of this method is that while there are plenty of power qua
 	  \label{intro:fig2}
 \end{figure}
 
-To evaluate the Napali framework, I propose to implement it as part of the Open Power Quality system and apply it to the problems of power quality monitoring. Combined with the higher level anomaly analisys Napali make a basis for a OpenPowerQuality(OPQ) power quality monitoring network. This network is made up of a group  monitoring devices as well as a centralized data sink server. This system will be deployed for testing at the University of Hawaii at Manoa campus, by deploying power quality monitors across at least 20 buildings on campus. University of Hawaii at Manoa is a unique testbed for such a network, since entire campus is isolated to it's own microgrid, connected to the municipal Oahu grid via a 46kV feeder. Furthermore, University of Hawaii has deployed a set of smart power monitors at the key positions in the grid, which can be used as a state of the art ground truth for evaluation of OPQ performance. The system relies on custom residential power quality monitor designed specifically for distributed monitoring. Instead of performing local analysis on the voltage waveform with the aim of PQ anomaly detection, or forwarding all the recording measurements to the centralized sink, OPQ system computes a small a small subset of features on the input voltage waveform. These features are then forwarded to the centralized sink which performs the anomaly detection on reduced data, while the raw waveform is retain for a short time on the PQ monitoring device. If the sink determines that the a possible anomaly has taken place, a request is sent to the affected and nearby devices for raw data. The goal of my system is not provide a low rate of false positives for a particular type of a power quality disturbance. Indeed once the raw data is acquired by the sink, filtering through the potential anomalies is trivial using well established methods. Instead the focus of my detection system is balancing a low bandwidth required for detection with the low rate of false negatives. Furthermore, monitoring at the leaf edges relies on the hierarchical nature of the power grid in order to ascertain the state of the entire power generation and delivery system. As noted in the literature, power quality disturbances tend to propagate down the hierarchy as shown in Figure \ref{intro:fig2}. Consider a lightning strike on a hypothetical 12kV feeder line in a hierarchical power grid. The directly affected devices will be the ones downstream from the disturbance. These devices will experience the most severe effects, most notably transients, as they propagate throughput the power delivery infrastructure. The indirectly affected devices will expedience a power anomaly mainly attributed to the power production entities trying to compensate for the large disturbance caused by the lightning strike. Thus monitoring of the leaf edges of the power delivery system can in principle provide insights into the disturbances that originate deep inside the power distribution network.
+Today`s big data world is plagued with the issues of data cleaning and validation, while it`s being relied on for timely, accurate and actionable intelligence. With large ingress of unstructured data these issues are unavoidable, and preprocessing will remain a large portion of the analysis workload. However, in the case of sensor networks designed for a specific purpose, the tasks of anomaly detection can be pushed to the edge of the network using the Napali methodology. The claim of this thesis is that Napali provides novel architecture that is both a feasible solution to the problem of distributed power quality monitoring and which also provides significant benefits over the two standard alternative architectures (all computation/storage at nodes, all computation/storage at the sink).
 
-OpenPowerQuality system designed to be a test bed for development of new power quality detection and analysis algorithms. Its introduction will facilitate development of new techniques and methods for studying power system. The main scientific contributions of this work are validating the proposed benefits of Napali as outlined in Section \ref{intro:section:napali} in a real setting utilizing OPQ system as a test bench.
+To evaluate the feasibility of the Napali framework, I propose to implement it as part of the Open Power Quality system and apply it to the problems of power quality monitoring. Combined with the higher level anomaly analysis Napali makes a basis for a OpenPowerQuality(OPQ) power quality monitoring network. This network is made up of a group  monitoring devices as well as a centralized data sink server. This system will be deployed for testing at the University of Hawaii at Manoa campus, by deploying power quality monitors across at least 20 buildings on campus. University of Hawaii at Manoa is a unique testbed for such a network, since entire campus is isolated to it's own microgrid, connected to the municipal Oahu grid via a 46kV feeder. Furthermore, University of Hawaii has deployed a set of smart power monitors at the key positions in the grid, which can be used as a state of the art ground truth for evaluation of OPQ performance. The system relies on custom residential power quality monitor designed specifically for distributed monitoring. Instead of performing local analysis on the voltage waveform with the aim of PQ anomaly detection, or forwarding all the recording measurements to the centralized sink, OPQ system computes a small a small subset of features on the input voltage waveform. These features are then forwarded to the centralized sink which performs the anomaly detection on reduced data, while the raw waveform is retain for a short time on the PQ monitoring device. If the sink determines that the a possible anomaly has taken place, a request is sent to the affected and nearby devices for raw data. The goal of my system is not provide a low rate of false positives for a particular type of a power quality disturbance. Indeed once the raw data is acquired by the sink, filtering through the potential anomalies is trivial using well established methods. Instead the focus of my detection system is balancing a low bandwidth required for detection with the low rate of false negatives. Furthermore, monitoring at the leaf edges relies on the hierarchical nature of the power grid in order to ascertain the state of the entire power generation and delivery system. As noted in the literature, power quality disturbances tend to propagate down the hierarchy as shown in Figure \ref{intro:fig2}. Consider a lightning strike on a hypothetical 12kV feeder line in a hierarchical power grid. The directly affected devices will be the ones downstream from the disturbance. These devices will experience the most severe effects, most notably transients, as they propagate throughput the power delivery infrastructure. The indirectly affected devices will expedience a power anomaly mainly attributed to the power production entities trying to compensate for the large disturbance caused by the lightning strike. Thus monitoring of the leaf edges of the power delivery system can in principle provide insights into the disturbances that originate deep inside the power distribution network.
+
+To evaluate the benefits of this architecture, I will assess the data collected by the OPQ network at the University of Hawaii in order to determine if the claimed benefits of the architecture are observed in practice. First, I will compare OPQ data to data collected from building-level monitors in order to determine whether or not false negatives are present.  A low number of false negatives will provide evidence that Napali's hybrid architecture does not sacrifice detection effectiveness.  Second, I will compute the storage and bandwidth savings from this hybrid architecture relative to an alternative architecture in which all waveform data is sent to a centralized server for analysis. Third, I will assess whether the onboard storage implemented in OPQ is sufficient for triggering, and whether or not situations occur when triggers request data that is no longer available at a node. Fourth, I will determine whether or not sub-threshold data acquisition occurs in practice for the test deployment. Fifth, I will assess whether or not the coarse features of the signal can be used to determine the extent of anomalies through temporal locality, and to what extent this approach conflicts with sub-threshold data acquisition. Although power failure resiliency and flexible privacy are claimed benefits of the Napali architecture, they will not be evaluated as part of this thesis research.
+
+OpenPowerQuality system is designed to be a test bed for development of new power quality detection and analysis algorithms. Its introduction will facilitate development of new techniques and methods for studying power system. The main scientific contributions of this work are validating the proposed benefits of Napali as outlined in Section \ref{intro:section:napali} in a real setting utilizing OPQ system as a test bench.
